# stdu-experiment

computer-organization-and-architecture/pro1/: pro1.xpr
computer-organization-and-architecture/pro2/: pro2.xpr
computer-organization-and-architecture/pro8/: pro8.xpr
my-OS/: my-OS.cbp
my-OS/OS/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
my-OS/OS/build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
my-OS/OS/build2/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
my-OS/OS/build2/simulated_os_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
my-OS/OS/build2/simulated_os_autogen/C3ZIZSTKPY/: moc_ThreadWidget.cpp  moc_ThreadWidget.cpp.d
my-OS/OS/build2/simulated_os_autogen/EWIEGA46WW/: moc_main_window.cpp.d
my-OS/OS/build2/simulated_os_autogen/GULY2SVRVA/: moc_DeviceWidget.cpp  moc_DeviceWidget.cpp.d
my-OS/OS/build2/simulated_os_autogen/O3FNYGJQRT/: moc_disk_widget.cpp  moc_disk_widget.cpp.d  moc_file_widget.cpp  moc_file_widget.cpp.d
my-OS/OS/build2/simulated_os_autogen/X5JWOZW5QK/: moc_MemoryWidget.cpp  moc_MemoryWidget.cpp.d
my-OS/OS/device/: DeviceWidget.cpp  DeviceWidget.h  banker_algorithm.cpp  banker_algorithm.h  i_banker.h
my-OS/OS/docs/superpowers/plans/: 2026-07-15-os-integration-plan.md
my-OS/OS/docs/superpowers/specs/: 2026-07-15-os-integration-design.md
my-OS/OS/file/: algorithm_compare.h  disk_scheduler.h  disk_widget.cpp  disk_widget.h  file_system.cpp  file_system.h  file_widget.cpp  file_widget.h
my-OS/OS/memory/: MemoryWidget.cpp  MemoryWidget.h  address_generator.cpp  address_generator.h  fifo_replacer.h  i_replacer.h  lru_replacer.cpp  lru_replacer.h  page_table_manager.h
my-OS/OS/thread/: DynamicPriorityScheduler.cpp  HRRNScheduler.h  ProducerConsumer.cpp  SJFScheduler.cpp  Scheduler.cpp  Scheduler.h  ThreadWidget.cpp  ThreadWidget.h
my-OS/device_managerment/: CMakeLists.txt  banker_algorithm.cpp  banker_algorithm.h  i_banker.h  main.cpp
my-OS/file_managerment/: CMakeLists.txt  algorithm_compare.cpp  algorithm_compare.h  disk_scheduler.cpp  disk_scheduler.h  disk_widget.cpp  disk_widget.h  file_system.cpp  file_system.h  file_widget.cpp  file_widget.h  main.cpp  main_window.cpp  main_window.h
my-OS/file_managerment/docs/superpowers/plans/: 2026-07-14-disk-scheduling-plan.md
my-OS/file_managerment/docs/superpowers/specs/: 2026-07-14-disk-scheduling-design.md
my-OS/memory_managerment/: CMakeLists.txt  address_generator.cpp  address_generator.h  fifo_replacer.cpp  fifo_replacer.h  i_replacer.h  lru_replacer.cpp  lru_replacer.h  main.cpp  main_window.cpp  main_window.h  page_table_manager.cpp  page_table_manager.h
my-OS/thread_managerment/: CMakeLists.txt  DynamicPriorityScheduler.h  HRRNScheduler.cpp  MyThread.cpp  MyThread.h  ProducerConsumer.cpp  ProducerConsumer.h  SJFScheduler.h  Scheduler.cpp  Scheduler.h  main.cpp  thread_managerment.cbp  thread_managerment.depend  thread_managerment.layout
pro1/pro1.cache/wt/: synthesis.wdf
pro3/: pro3.xpr
pro4/: pro4.xpr
pro6/: pro6.xpr
pro7/: pro7.xpr
pro8/: pro8.xpr
smart_clock_qt/: main.cpp  moc_widget.cpp  smart_clock  smart_clock.pro  widget.cpp  widget.h
smart_clock_qt/app/: icon.cpp  icon.h  key.cpp  key.h  rtc.h
smart_clock_qt/hal/: buzzer.cpp  buzzer.h  hal.h
source_code/1_adder/: adder.v
source_code/2_multiply/: multiply.v
source_code/3_regfile/: regfile.v
source_code/4_alu/: alu_display.v
source_code/6_single_cycle_cpu/: data_ram.v  regfile.v
source_code/7_multi_cycle_cpu/: multi_cycle_cpu.v  multi_cycle_cpu.xdc  regfile.v
(+957 files in other folders)
